Fix visual artifacts visible in bars-mode

--- a/style.css
+++ b/style.css
@@ -16,5 +16,6 @@ svg#glubow {
 }
 
 svg#glubow .data-point {
+  shape-rendering: crispedges;
   transition: all 0.3s ease-in-out;
 }
